# node-leveldb-zlib

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  binding_node.js  binding_wasm.js  buildChecks.js  index_wasm.d.ts  index_wasm.js  package.json  tsconfig.json  tsconfig_node.json  tsconfig_wasm.json
.github/workflows/: ci.yml
src/: bindings.cpp
ts_wasm/: chainedBatch.ts  iterator.ts  leveldb.ts
wasm/: emnapi_import.h
